# may-i

./: .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  tarpaulin.toml
crates/config/: Cargo.toml
crates/config/src/: io.rs  (+2 more)
crates/core/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: annotate.rs  check.rs  engine_tests.rs  lib.rs  matcher.rs  var_env.rs
crates/engine/src/engine/: code_execution.rs  dynamic_parts.rs  function_call.rs  matcher.rs  mod.rs  read_builtin.rs  rule_match.rs  tests.rs  visitor.rs  wrapper_unwrap.rs
crates/engine/src/engine/visitors/: code_execution.rs  dynamic_parts.rs  function_call.rs  mod.rs  read_builtin.rs  rule_match.rs  wrapper_unwrap.rs
crates/engine/src/visitors/: code_execution.rs  dynamic_parts.rs  function_call.rs  read_builtin.rs  rule_match.rs  wrapper_unwrap.rs
crates/pp/: Cargo.toml
crates/sexpr/: Cargo.toml
crates/shell-parser/: Cargo.toml
specs/: cli-interface.md  configuration.md  domain-model.md  evaluation-trace.md  hook-protocol.md  permission-evaluation.md  security-filters.md  shell-parser.md  variable-resolution.md  visitor-pipeline.md
src/: check.rs  cli.rs  cmd_check.rs  cmd_eval.rs  cmd_hook.rs  cmd_parse.rs  config.rs  config_parse.rs  defaults.rs  engine.rs  errors.rs  lib.rs  main.rs  output.rs  parser.rs  pp.rs  security.rs  sexpr.rs  starter_config.lisp  starter_config.toml  types.rs
src/config_parse/: expr.rs  mod.rs
src/engine/: matcher.rs  mod.rs
src/parser/: ast.rs  glob.rs  lexer.rs  mod.rs  parse.rs  resolve.rs  tests.rs
tests/: config_error_snapshots.rs  hook_e2e.rs  parser_snapshots.rs  wrapper_snapshots.rs
tests/snapshots/: config_error_snapshots__config__empty_form.snap  config_error_snapshots__config__rule_missing_command.snap  (+73 more)
(+74 files in other folders)
