[package]
name = "may-i"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
insta = "1"
predicates = "3"
tempfile = "3"
